{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 35,
  "lineage": "723d30c1-69e1-0cf8-378f-eebccbbba3fc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "NLB_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:042648307108:targetgroup/Testing-NLB/0d07a6a4bebea19e-20210304074915057100000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:042648307108:targetgroup/Testing-NLB/0d07a6a4bebea19e",
            "target_id": "i-063e9fa6b1809a83e"
          },
          "dependencies": [
            "aws_instance.public",
            "aws_lb_target_group.NLB_Target_group",
            "aws_security_group.Allow-all",
            "aws_subnet.public",
            "aws_vpc.my-aws"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:042648307108:targetgroup/Testing-NLB/0d07a6a4bebea19e-20210304074915254600000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:042648307108:targetgroup/Testing-NLB/0d07a6a4bebea19e",
            "target_id": "i-0a9c29a6dd14f4624"
          },
          "dependencies": [
            "aws_instance.public",
            "aws_lb_target_group.NLB_Target_group",
            "aws_security_group.Allow-all",
            "aws_subnet.public",
            "aws_vpc.my-aws"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:042648307108:targetgroup/Testing-NLB/0d07a6a4bebea19e-20210304074915137600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:042648307108:targetgroup/Testing-NLB/0d07a6a4bebea19e",
            "target_id": "i-0a2d2d016e54eafbe"
          },
          "dependencies": [
            "aws_instance.public",
            "aws_lb_target_group.NLB_Target_group",
            "aws_security_group.Allow-all",
            "aws_subnet.public",
            "aws_vpc.my-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Nat_IP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0596542ba2b4ffc14",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-50-16-2-182.compute-1.amazonaws.com",
            "public_ip": "50.16.2.182",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "private_Nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00260d7e4c9a85bce",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-197-190-15.compute-1.amazonaws.com",
            "public_ip": "54.197.190.15",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-.0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.my-aws"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-05248a44bc8d025e1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-230-210-54.compute-1.amazonaws.com",
            "public_ip": "34.230.210.54",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-.1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.my-aws"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-03b34e0dae3f0b8fe",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-174-129-17-241.compute-1.amazonaws.com",
            "public_ip": "174.129.17.241",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-.2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.my-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:042648307108:instance/i-05b5f059a7f1f3aef",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05b5f059a7f1f3aef",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09daef27410afe01c",
            "private_dns": "ip-192-168-0-188.ec2.internal",
            "private_ip": "192.168.0.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0abe94005f5e5b71a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac96e6a2639c33d2",
            "tags": {
              "Name": "private-.0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03e111b48b77f0bc0"
            ]
          },
          "dependencies": [
            "aws_security_group.Allow-all",
            "aws_subnet.private",
            "aws_vpc.my-aws"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:042648307108:instance/i-03d26fba70256bcd4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03d26fba70256bcd4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b5473ffc78bbad6a",
            "private_dns": "ip-192-168-1-198.ec2.internal",
            "private_ip": "192.168.1.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02946dab594377012",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043845d44ba210f37",
            "tags": {
              "Name": "private-.1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03e111b48b77f0bc0"
            ]
          },
          "dependencies": [
            "aws_security_group.Allow-all",
            "aws_subnet.private",
            "aws_vpc.my-aws"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:042648307108:instance/i-0c2405351447e0621",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c2405351447e0621",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ca42e42a87b9c493",
            "private_dns": "ip-192-168-2-131.ec2.internal",
            "private_ip": "192.168.2.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02b928379648f2d5a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05772516e6bf90ef8",
            "tags": {
              "Name": "private-.2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03e111b48b77f0bc0"
            ]
          },
          "dependencies": [
            "aws_security_group.Allow-all",
            "aws_subnet.private",
            "aws_vpc.my-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:042648307108:instance/i-063e9fa6b1809a83e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063e9fa6b1809a83e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-071f08e182353d114",
            "private_dns": "ip-192-168-5-252.ec2.internal",
            "private_ip": "192.168.5.252",
            "public_dns": "ec2-107-23-161-70.compute-1.amazonaws.com",
            "public_ip": "107.23.161.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cde1034c3c629fc8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac85cfb5f16ced3f",
            "tags": {
              "Name": "Public-.0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03e111b48b77f0bc0"
            ]
          },
          "dependencies": [
            "aws_security_group.Allow-all",
            "aws_subnet.public",
            "aws_vpc.my-aws"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:042648307108:instance/i-0a9c29a6dd14f4624",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a9c29a6dd14f4624",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ef92ce3f52e0cff1",
            "private_dns": "ip-192-168-6-132.ec2.internal",
            "private_ip": "192.168.6.132",
            "public_dns": "ec2-54-226-197-77.compute-1.amazonaws.com",
            "public_ip": "54.226.197.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-000985332a907182c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041ed24b2c5ba2f4c",
            "tags": {
              "Name": "Public-.1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03e111b48b77f0bc0"
            ]
          },
          "dependencies": [
            "aws_security_group.Allow-all",
            "aws_subnet.public",
            "aws_vpc.my-aws"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:042648307108:instance/i-0a2d2d016e54eafbe",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a2d2d016e54eafbe",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b668df90977ae606",
            "private_dns": "ip-192-168-7-106.ec2.internal",
            "private_ip": "192.168.7.106",
            "public_dns": "ec2-3-93-43-242.compute-1.amazonaws.com",
            "public_ip": "3.93.43.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dc085e6c0fed7dda",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b19ac1f7135469c",
            "tags": {
              "Name": "Public-.2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03e111b48b77f0bc0"
            ]
          },
          "dependencies": [
            "aws_security_group.Allow-all",
            "aws_subnet.public",
            "aws_vpc.my-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:042648307108:internet-gateway/igw-09f83b616e59ce917",
            "id": "igw-09f83b616e59ce917",
            "owner_id": "042648307108",
            "tags": {
              "Name": "Personal-public-jumpserver"
            },
            "vpc_id": "vpc-06c6a4415238d54b1"
          },
          "dependencies": [
            "aws_vpc.my-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "testing-NLB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:042648307108:loadbalancer/net/My-NLB/6294851130921fd8",
            "arn_suffix": "net/My-NLB/6294851130921fd8",
            "dns_name": "My-NLB-6294851130921fd8.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:042648307108:loadbalancer/net/My-NLB/6294851130921fd8",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "My-NLB",
            "subnet_mapping": [
              {
                "allocation_id": "eipalloc-00260d7e4c9a85bce",
                "subnet_id": "subnet-0ac85cfb5f16ced3f"
              },
              {
                "allocation_id": "eipalloc-03b34e0dae3f0b8fe",
                "subnet_id": "subnet-04b19ac1f7135469c"
              },
              {
                "allocation_id": "eipalloc-05248a44bc8d025e1",
                "subnet_id": "subnet-041ed24b2c5ba2f4c"
              }
            ],
            "subnets": [
              "subnet-041ed24b2c5ba2f4c",
              "subnet-04b19ac1f7135469c",
              "subnet-0ac85cfb5f16ced3f"
            ],
            "vpc_id": "vpc-06c6a4415238d54b1",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_eip.my-eip",
            "aws_subnet.public",
            "aws_vpc.my-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:042648307108:listener/net/My-NLB/6294851130921fd8/a8a7de9358dd48f9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:042648307108:targetgroup/Testing-NLB/0d07a6a4bebea19e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:042648307108:listener/net/My-NLB/6294851130921fd8/a8a7de9358dd48f9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:042648307108:loadbalancer/net/My-NLB/6294851130921fd8",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my-eip",
            "aws_lb.testing-NLB",
            "aws_lb_target_group.NLB_Target_group",
            "aws_subnet.public",
            "aws_vpc.my-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "NLB_Target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:042648307108:targetgroup/Testing-NLB/0d07a6a4bebea19e",
            "arn_suffix": "targetgroup/Testing-NLB/0d07a6a4bebea19e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:042648307108:targetgroup/Testing-NLB/0d07a6a4bebea19e",
            "lambda_multi_value_headers_enabled": false,
            "name": "Testing-NLB",
            "port": 80,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "Nlb testing"
            },
            "target_type": "instance",
            "vpc_id": "vpc-06c6a4415238d54b1"
          },
          "dependencies": [
            "aws_vpc.my-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "My_Nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0596542ba2b4ffc14",
            "id": "nat-0cbf876cbfcae605f",
            "network_interface_id": "eni-00044c52892b5552b",
            "private_ip": "192.168.5.110",
            "public_ip": "50.16.2.182",
            "subnet_id": "subnet-0ac85cfb5f16ced3f",
            "tags": {
              "Name": "My-Nat"
            }
          },
          "dependencies": [
            "aws_eip.Nat_IP",
            "aws_subnet.public",
            "aws_vpc.my-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "My_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0648dea33326e3e4f",
            "owner_id": "042648307108",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0cbf876cbfcae605f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "NAT_Testing"
            },
            "vpc_id": "vpc-06c6a4415238d54b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Nat_IP",
            "aws_nat_gateway.My_Nat",
            "aws_subnet.public",
            "aws_vpc.my-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rout",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07f04eb00f8ef6fc5",
            "owner_id": "042648307108",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f83b616e59ce917",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Personal-IGW_Jump"
            },
            "vpc_id": "vpc-06c6a4415238d54b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.my-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04abe884de5aed1fe",
            "route_table_id": "rtb-0648dea33326e3e4f",
            "subnet_id": "subnet-0ac96e6a2639c33d2"
          },
          "dependencies": [
            "aws_eip.Nat_IP",
            "aws_nat_gateway.My_Nat",
            "aws_route_table.My_NAT",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.my-aws"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae489fc34c4e7998",
            "route_table_id": "rtb-0648dea33326e3e4f",
            "subnet_id": "subnet-043845d44ba210f37"
          },
          "dependencies": [
            "aws_eip.Nat_IP",
            "aws_nat_gateway.My_Nat",
            "aws_route_table.My_NAT",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.my-aws"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dab9dcde927c42ef",
            "route_table_id": "rtb-0648dea33326e3e4f",
            "subnet_id": "subnet-05772516e6bf90ef8"
          },
          "dependencies": [
            "aws_eip.Nat_IP",
            "aws_nat_gateway.My_Nat",
            "aws_route_table.My_NAT",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.my-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a66a3c6b05e8110",
            "route_table_id": "rtb-07f04eb00f8ef6fc5",
            "subnet_id": "subnet-0ac85cfb5f16ced3f"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public_rout",
            "aws_subnet.public",
            "aws_vpc.my-aws"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0145506e62fb2b1eb",
            "route_table_id": "rtb-07f04eb00f8ef6fc5",
            "subnet_id": "subnet-041ed24b2c5ba2f4c"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public_rout",
            "aws_subnet.public",
            "aws_vpc.my-aws"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1ba55be46f7a709",
            "route_table_id": "rtb-07f04eb00f8ef6fc5",
            "subnet_id": "subnet-04b19ac1f7135469c"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public_rout",
            "aws_subnet.public",
            "aws_vpc.my-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Allow-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:042648307108:security-group/sg-03e111b48b77f0bc0",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e111b48b77f0bc0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "042648307108",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c6a4415238d54b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:042648307108:subnet/subnet-0ac96e6a2639c33d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0ac96e6a2639c33d2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "042648307108",
            "tags": {
              "Name": "Personal-Private-0"
            },
            "vpc_id": "vpc-06c6a4415238d54b1"
          },
          "dependencies": [
            "aws_vpc.my-aws"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:042648307108:subnet/subnet-043845d44ba210f37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-043845d44ba210f37",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "042648307108",
            "tags": {
              "Name": "Personal-Private-1"
            },
            "vpc_id": "vpc-06c6a4415238d54b1"
          },
          "dependencies": [
            "aws_vpc.my-aws"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:042648307108:subnet/subnet-05772516e6bf90ef8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-05772516e6bf90ef8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "042648307108",
            "tags": {
              "Name": "Personal-Private-2"
            },
            "vpc_id": "vpc-06c6a4415238d54b1"
          },
          "dependencies": [
            "aws_vpc.my-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:042648307108:subnet/subnet-0ac85cfb5f16ced3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.5.0/24",
            "id": "subnet-0ac85cfb5f16ced3f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "042648307108",
            "tags": {
              "Name": "Personal-public-0"
            },
            "vpc_id": "vpc-06c6a4415238d54b1"
          },
          "dependencies": [
            "aws_vpc.my-aws"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:042648307108:subnet/subnet-041ed24b2c5ba2f4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.6.0/24",
            "id": "subnet-041ed24b2c5ba2f4c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "042648307108",
            "tags": {
              "Name": "Personal-public-1"
            },
            "vpc_id": "vpc-06c6a4415238d54b1"
          },
          "dependencies": [
            "aws_vpc.my-aws"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:042648307108:subnet/subnet-04b19ac1f7135469c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.7.0/24",
            "id": "subnet-04b19ac1f7135469c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "042648307108",
            "tags": {
              "Name": "Personal-public-2"
            },
            "vpc_id": "vpc-06c6a4415238d54b1"
          },
          "dependencies": [
            "aws_vpc.my-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:042648307108:vpc/vpc-06c6a4415238d54b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-007c986d4358b4b0d",
            "default_route_table_id": "rtb-0eca44aa54f8eae6c",
            "default_security_group_id": "sg-0e0bf398628e1abd7",
            "dhcp_options_id": "dopt-3aadd740",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06c6a4415238d54b1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0eca44aa54f8eae6c",
            "owner_id": "042648307108",
            "tags": {
              "Name": "personal-vpc"
            }
          }
        }
      ]
    }
  ]
}